import java.time.LocalDateTime
import java.time.format.DateTimeFormatter

plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.rubydung'
version = '1'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
    maven { url 'https://maven.firstdark.dev/releases' }
}

dependencies {
    // LWJGL
    implementation platform('org.lwjgl:lwjgl-bom:3.4.0')
    implementation 'org.lwjgl:lwjgl'
    implementation 'org.lwjgl:lwjgl-glfw'
    implementation 'org.lwjgl:lwjgl-opengl'
    implementation 'org.lwjgl:lwjgl-stb'

    // Нативные библиотеки для Linux и Windows
    runtimeOnly "org.lwjgl:lwjgl::natives-linux"
    runtimeOnly "org.lwjgl:lwjgl-glfw::natives-linux"
    runtimeOnly "org.lwjgl:lwjgl-opengl::natives-linux"
    runtimeOnly "org.lwjgl:lwjgl-stb::natives-linux"

    runtimeOnly "org.lwjgl:lwjgl::natives-windows"
    runtimeOnly "org.lwjgl:lwjgl-glfw::natives-windows"
    runtimeOnly "org.lwjgl:lwjgl-opengl::natives-windows"
    runtimeOnly "org.lwjgl:lwjgl-stb::natives-windows"

    // Discord RPC (локальный файл) и JNA
    implementation files('libs/java-discord-rpc-2.0.1-all.jar')
    implementation 'net.java.dev.jna:jna:5.12.0'
}

// ===== VERSION GENERATION =====

def versionFile = file("src/main/resources/version.properties")

tasks.register("generateVersionProperties") {
    outputs.file(versionFile)
    outputs.upToDateWhen { false }  // Всегда перезаписываем файл для актуальности

    doLast {
        def now = LocalDateTime.now()
        def datePart = now.format(DateTimeFormatter.ofPattern("MMdd"))
        def timePart = now.format(DateTimeFormatter.ofPattern("HHmm"))

        def libsDir = file("${buildDir}/libs")

        def versionString = ".ruby-${datePart}"

        def baseDir = new File(libsDir, "dot-ruby-${datePart}")
        def jarRelease = new File(baseDir, "dot-ruby-${datePart}.jar")
        def jarDebug = new File(baseDir, "debug-ruby-${datePart}.jar")

        if (baseDir.exists() && (jarRelease.exists() || jarDebug.exists())) {
            versionString = ".ruby-${datePart}-${timePart}"
        }

        project.ext.generatedVersion = versionString

        versionFile.parentFile.mkdirs()
        versionFile.text = "version=${versionString}\n"

        println "[Build] Version set to: ${versionString}"
    }
}

processResources.dependsOn("generateVersionProperties")

// ===== ОБЩИЕ НАСТРОЙКИ ДЛЯ SHADOW JAR =====

def commonShadowConfig = {
    dependsOn("classes", "processResources", "generateVersionProperties")

    from(project.sourceSets.main.output)

    // Отключаем автоматическое включение конфигураций, чтобы избежать ошибки в DefaultDependencyFilter
    configurations = []

    // Включаем все зависимости вручную через zipTree
    project.configurations.runtimeClasspath.files.each { dep ->
        from(project.zipTree(dep))
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    exclude "META-INF/*.SF"
    exclude "META-INF/*.DSA"
    exclude "META-INF/*.RSA"
}

// ===== RELEASE JAR (Main-Class: Base) =====

shadowJar {
    commonShadowConfig.delegate = delegate
    commonShadowConfig()

    manifest {
        attributes 'Main-Class': 'SwordsGame.client.core.Base'
    }

    doFirst {
        def v = project.ext.generatedVersion ?: ".ruby-unknown"
        def dateTimePart = v.replace(".ruby-", "")

        def outputDir = file("${buildDir}/libs/dot-ruby-${dateTimePart}")
        destinationDirectory.set(outputDir)
        outputDir.mkdirs()

        archiveFileName.set("dot-ruby-${dateTimePart}.jar")

        println "[Build] Release JAR: ${outputDir}/${archiveFileName.get()}"
    }
}

// ===== DEBUG JAR (Main-Class: Debug) =====

tasks.register('shadowJarDebug', shadowJar.getClass()) {
    commonShadowConfig.delegate = delegate
    commonShadowConfig()

    manifest {
        attributes 'Main-Class': 'SwordsGame.client.core.Debug'  // Поправьте, если путь к классу другой
    }

    doFirst {
        def v = project.ext.generatedVersion ?: ".ruby-unknown"
        def dateTimePart = v.replace(".ruby-", "")

        def outputDir = file("${buildDir}/libs/dot-ruby-${dateTimePart}")
        destinationDirectory.set(outputDir)
        outputDir.mkdirs()

        archiveFileName.set("debug-ruby-${dateTimePart}.jar")

        println "[Build] Debug JAR: ${outputDir}/${archiveFileName.get()}"
    }
}

// Делаем задачу shadowJar собирать также debug JAR
shadowJar.dependsOn shadowJarDebug

// Делаем задачу build собирать оба JAR
build.dependsOn shadowJar